--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   intl: ^0.20.2
   firebase_messaging: ^15.2.5
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
