--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
   shared_preferences: ^2.5.3
+  mesh_gradient: ^1.3.8
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,10 @@ flutter:
   assets:
     - assets/logo.png
     - assets/google_logo.png
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/ikonka.png"
  
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -100,3 +106,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
