--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_sign_in: ^6.3.0 # Zawsze najnowsza stabilna wersja
   google_fonts: ^6.2.1 # Do czcionki Sen
   cloud_firestore: ^5.6.6
-  intl: ^0.20.2
+  intl: ^0.17.0
   firebase_messaging: ^15.2.5
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
@@ -47,6 +47,11 @@ dependencies:
   mesh_gradient: ^1.3.8
   flutter_launcher_icons: ^0.14.3
   zo_animated_border: ^0.0.6
+  http: ^1.3.0
+  cloud_functions: ^5.4.0
+  firebase_admin: ^0.3.0+2
+  snapshot: ^0.2.6+2
+
 
 dev_dependencies:
   flutter_test:
