--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,9 @@ dependencies:
   table_calendar: ^3.0.8
   gradient_borders: ^1.0.1
   awesome_snackbar_content: ^0.1.1
-
+  firebase_remote_config: ^5.4.3
+  mobile_scanner: ^6.0.10
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -114,4 +116,5 @@ flutter_icons:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
 
